--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=ESP8266Audio
 version=1.0
-author=Earle F. Philhower, III
-maintainer=Earle F. Philhower, III
-sentence=Audio file and I2S sound playing routines.
-paragraph=Decode compressed MP3, FLAC, Screamtracker MOD, and WAV and play on an I2S DAC or a software-driven delta-sigma DAC and 1-transistor amplifier.
+author=Johannes Schreiner
+maintainer=Johannes Schreiner
+sentence=3 CANNEL AUDIO PLAYER AND SEQUENZER FOR THE ESP32.
+paragraph=play on an I2S DAC or a software-driven delta-sigma DAC and 1-transistor amplifier.
 category=Signal Input/Output
-url=https://github.com/earlephilhower/ESP8266Audio
-architectures=esp8266,esp32
+url=https://github.com/JohannesMTC/ESP32_MAS
+architectures=esp32
 
