--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=ESP8266Audio
+name=ESP32_MAS
 version=1.0
 author=Johannes Schreiner
 maintainer=Johannes Schreiner
 sentence=3 CANNEL AUDIO PLAYER AND SEQUENZER FOR THE ESP32.
-paragraph=play on an I2S DAC or a software-driven delta-sigma DAC and 1-transistor amplifier.
+paragraph=arduino library for the ESP32 to realais a a sound- output for roboter or model construction.
 category=Signal Input/Output
 url=https://github.com/JohannesMTC/ESP32_MAS
 architectures=esp32
